Fix a few layout issues on the login page.

--- a/src/pages/login-page/login-page.module.css
+++ b/src/pages/login-page/login-page.module.css
@@ -1,9 +1,9 @@
 .layout {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
@@ -12,6 +12,8 @@
     background-size: cover ;
 
     position: relative;
+    padding-top: 15px;
+    padding-bottom: 75px;
 }
 
 .header {
@@ -20,7 +22,7 @@
 
 .card {
     box-shadow: 0 0 50px 0 rgba(0, 0, 0, 1);
-    width: 600px !important;
+    max-width: 600px !important;
 }
 
 .message {
